salesforce/force-app/main/default/objects/Store_Appointment__c/Store_Appointment__c.object-meta.xml
<CustomObject>
    <label>Store Appointment</label>
    <nameField>
        <displayFormat>APT-{0000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>