salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Appointment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Appointment_DateTime__c</fullName>
    <label>Appointment Date/Time</label>
    <type>DateTime</type>
</CustomField>