salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Online</fullName><default>false</default><label>Online</label></value>
            <value><fullName>In-Store Walk-in</fullName><default>false</default><label>In-Store Walk-in</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>