salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Store Appointments</relationshipLabel>
    <relationshipName>Store_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>