salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Identity_Tier__c.field-meta.xml
<CustomField>
    <fullName>Identity_Tier__c</fullName>
    <label>Identity Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Known</fullName><default>false</default><label>Known</label></value>
            <value><fullName>Appended</fullName><default>false</default><label>Appended</label></value>
            <value><fullName>Anonymous</fullName><default>false</default><label>Anonymous</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>