salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Products_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Products_Purchased__c</fullName>
    <label>Products Purchased</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>