salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Rep_Post_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rep_Post_Notes__c</fullName>
    <label>Post-Consultation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>