salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Rep_Prep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rep_Prep_Notes__c</fullName>
    <label>Prep Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>