salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Store_Location__c.field-meta.xml
<CustomField>
    <fullName>Store_Location__c</fullName>
    <label>Store Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>