salesforce/force-app/main/default/objects/Store_Appointment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Consultation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Skincare Consultation</fullName><default>true</default><label>Skincare Consultation</label></value>
            <value><fullName>Makeup Application</fullName><default>false</default><label>Makeup Application</label></value>
            <value><fullName>Color Match</fullName><default>false</default><label>Color Match</label></value>
            <value><fullName>Product Demo</fullName><default>false</default><label>Product Demo</label></value>
            <value><fullName>Follow-up</fullName><default>false</default><label>Follow-up</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>